tests/NormalTests/paczka1/small_fuzzy/44357834.err
Error in line 1: D0w A439 74,4
Error in line 2: sFaA A701 96,6
Error in line 4: D0w S866 41,4
